--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Setup vcpkg
       uses: lukka/run-vcpkg@v11
       with:
-        vcpkgGitCommitId: '2024.11.16'
+        vcpkgGitCommitId: 'dd3097e305afa53f7b4312371f62058d2e665320'
 
     - name: Configure CMake (Linux/macOS)
       if: matrix.os != 'windows-latest'
