--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,34 @@
-# Create binacpp library
-add_library(binacpp SHARED
-    binacpp.cpp
-    binacpp_utils.cpp
-    binacpp_logger.cpp
-    binacpp_websocket.cpp
-)
+# Create binacpp library - Option to use modular or single file approach
+option(USE_MODULAR_STRUCTURE "Use modular file structure instead of single binacpp.cpp" OFF)
+
+if(USE_MODULAR_STRUCTURE)
+    # Modular structure - include all individual function files
+    file(GLOB_RECURSE BINACPP_SOURCES
+        "initialization/*.cpp"
+        "market_data/*.cpp"
+        "account/*.cpp"
+        "trading/*.cpp"
+        "user_stream/*.cpp"
+        "wallet/*.cpp"
+        "utils/*.cpp"
+    )
+    
+    add_library(binacpp SHARED
+        binacpp_modular.cpp
+        binacpp_utils.cpp
+        binacpp_logger.cpp
+        binacpp_websocket.cpp
+        ${BINACPP_SOURCES}
+    )
+else()
+    # Traditional single file structure
+    add_library(binacpp SHARED
+        binacpp.cpp
+        binacpp_utils.cpp
+        binacpp_logger.cpp
+        binacpp_websocket.cpp
+    )
+endif()
 
 # Set target properties
 set_target_properties(binacpp PROPERTIES
