--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,12 @@ jobs:
           - os: ubuntu-latest
             preset: linux-default
             vcpkg_triplet: x64-linux
-          # - os: windows-latest
-          #   preset: windows-default
-          #   vcpkg_triplet: x64-windows
-          # - os: macos-latest
-          #   preset: macos-default
-          #   vcpkg_triplet: x64-osx
+          - os: windows-latest
+            preset: windows-default
+            vcpkg_triplet: x64-windows
+          - os: macos-latest
+            preset: macos-default
+            vcpkg_triplet: x64-osx
 
     runs-on: ${{ matrix.os }}
 
