--- a/cmake/ExamplesCMakeLists.txt.in
+++ b/cmake/ExamplesCMakeLists.txt.in
@@ -1,3 +1,17 @@
+cmake_minimum_required(VERSION 3.20)
+
+project(binancecpp_examples
+    VERSION @PROJECT_VERSION@
+    DESCRIPTION "Examples for binancecpp library"
+    LANGUAGES CXX)
+
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Find binancecpp
+find_package(binancecpp REQUIRED)
+
 # Example executables
 set(EXAMPLES
     example
@@ -23,11 +37,6 @@ foreach(EXAMPLE_NAME ${EXAMPLES})
         target_link_libraries(${EXAMPLE_NAME}
             PRIVATE
                 binancecpp::binancecpp
-        )
-
-        target_include_directories(${EXAMPLE_NAME}
-            PRIVATE
-                ${CMAKE_SOURCE_DIR}/src
         )
 
         # C++20 compile options
